🔧 refactor: fix little warnings